# worldcup-2026-simulator

./: .gitignore  ARCHITECTURE.md  README.md  pyproject.toml  requirements.txt
src/worldcup_sim/: streamlit_app.py
src/worldcup_sim/app/: state.py
src/worldcup_sim/app/components/: bracket_viz.py  charts.py
src/worldcup_sim/app/pages/: bracket.py  odds.py  simulation.py  standings.py
src/worldcup_sim/data/: _annex_c.py  _teams.py  annex_c.json  cache.py  calibrate.py  fetch.py  models.py  teams.json
src/worldcup_sim/rules/: bracket.py  group_stage.py  third_place.py
src/worldcup_sim/sim/: engine.py  metrics.py  outcome_table.py  predictor.py
