[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "worldcup-sim"
version = "0.1.0"
description = "World Cup 2026 Monte Carlo Tournament Simulator"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.28.1",
    "numpy>=2.5.0",
    "pandas>=3.0.3",
    "plotly>=6.8.0",
    "pydantic>=2.13.4",
    "streamlit>=1.58.0",
]

[tool.setuptools.packages.find]
where = ["src"]
include = ["worldcup_sim*"]
